# log_watcher

./: Cargo.toml  README.md  config.toml
src/: lib.rs  main.rs  ui.rs
src/state/: inspection.rs  mod.rs  search.rs  sound_player.rs  tabs.rs  window.rs
