[package]
name = "log_watcher"
version = "0.1.0"
authors = ["Evaldas Tyla <evaldas.tyla@oc.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
termion = "*"
tui = "0.6.2"
failure = "0.1.5"
unicode-width = "0.1.5"
serde_json = "1.0"
chrono = "0.4"